<resources>
    <string name="app_name">State Machine Designer</string>
    <string name="action_play">Play</string>
    <string name="action_edit">Edit</string>
    <string name="action_new_project">New project</string>
    <string name="action_clone_project">Clone</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_serial_transfer">Upload to device</string>
    <string name="action_delete">Delete</string>
    <string name="action_debug">Debug</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_frame">Add frame</string>
    <string name="action_clone_frame">Clone</string>
    <string name="action_move_forward">Move forward</string>
    <string name="action_move_backward">Move backward</string>
    <string name="action_cut">Cut</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_prev_frame">Previous frame</string>
    <string name="action_next_frame">Next frame</string>
    <string name="action_show_transfers">Transfers</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_shift_left">Shift left</string>
    <string name="action_shift_right">Shift right</string>
    <string name="action_shift_up">Shift up</string>
    <string name="action_shift_down">Shift down</string>
    <string name="action_invert">Invert colors</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete_frame">Delete frame</string>
    <string name="label_comm_status">Device communication status</string>
    <string name="action_refresh">Refresh</string>
    <string name="label_upload">Send current project to device</string>
    <string name="unknown_project_placeholder">Unknown</string>
    <string name="alt_text_prev_project">Previous project</string>
    <string name="action_upload">Upload</string>
    <string name="alt_text_next_project">Next project</string>
    <string name="label_download">Retrieve project from device</string>
    <string name="action_download">Download</string>
    <string name="action_cycle_view_mode">Cycle view mode</string>
    <string name="action_pause">Pause</string>
    <string name="action_faster">Faster</string>
    <string name="action_slower">Slower</string>
    <string name="action_prev_project">Previous project</string>
    <string name="action_next_project">Next project</string>
    <string name="unknown_transfer_placeholder">Unknown transfer</string>
    <string name="label_project_title">Project title:</string>
    <string name="label_global_speed">Global speed:</string>
    <string name="raw_data_hint">Raw data for import/export</string>
    <string name="project_name_template">Project #%d</string>
    <string name="frame_number_template">Frame #%d</string>
    <string name="comm_status_no_device">No device found</string>
    <string name="comm_status_no_permission">No permission</string>
    <string name="comm_status_pending_permission">Waiting for permission</string>
    <string name="comm_status_connecting">Connecting</string>
    <string name="comm_status_connection_failed">Connection failed</string>
    <string name="comm_status_connected">Connected</string>
    <string name="comm_status_sending">Sending</string>
    <string name="comm_status_receiving">Receiving</string>
    <string name="comm_status_handshake_failed">Handshake failed</string>
    <string name="comm_status_unknown">Unknown</string>
    <string name="frame_number_error">Error state</string>
    <string name="action_continue">Continue</string>
    <string name="alt_text_tx_up">Up</string>
    <string name="alt_text_tx_auto">Auto</string>
    <string name="alt_text_tx_left">Left</string>
    <string name="alt_text_tx_click">Click</string>
    <string name="alt_text_tx_right">Right</string>
    <string name="alt_text_tx_down">Down</string>
    <string name="alt_text_tx_unknown">Unknown</string>
    <string name="alt_text_op_inherit">Default</string>
    <string name="alt_text_op_next">Next</string>
    <string name="alt_text_op_previous">Previous</string>
    <string name="alt_text_op_pause">Pause</string>
    <string name="alt_text_op_faster">Faster</string>
    <string name="alt_text_op_slower">Slower</string>
    <string name="alt_text_op_none">None</string>
    <string name="alt_text_op_error">Error</string>
    <string name="alt_text_op_unknown">Unknown</string>
    <string name="alt_text_reset">Reset</string>
    <string name="action_rotate_left">Rotate left</string>
    <string name="action_rotate_right">Rotate right</string>
    <string name="action_flip_horizontal">Flip horizontally</string>
    <string name="action_flip_vertical">Flip vertically</string>
    <string name="action_cycle_speed">Cycle speed</string>
    <string name="speed_fast">Speed: fast</string>
    <string name="speed_normal">Speed: normal</string>
    <string name="speed_slow">Speed: slow</string>
    <string name="speed_stopped">Speed: standstill</string>
    <string name="speed_unknown">Speed: unknown</string>
    <string name="title_pattern">Pattern editor</string>
</resources>
