<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/miPlayProject"
        android:icon="@drawable/ic_play"
        android:title="@string/action_play"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/miEditProject"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/miNewProject"
        android:icon="@drawable/ic_new"
        android:title="@string/action_new_project" />
    <item
        android:id="@+id/miCloneProject"
        android:icon="@drawable/ic_clone"
        android:title="@string/action_clone_project" />
    <item
        android:id="@+id/miImportProject"
        android:icon="@drawable/ic_open"
        android:title="@string/action_import" />
    <item
        android:id="@+id/miExportProject"
        android:icon="@drawable/ic_save"
        android:title="@string/action_export" />
    <item
        android:id="@+id/miUploadProject"
        android:icon="@drawable/ic_upload"
        android:title="@string/action_serial_transfer" />
    <item
        android:id="@+id/miDeleteProject"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete" />

</menu>